# langchain

./: .env.example  .gitignore  main.py  middleware.py  pyproject.toml  requirements.txt
RAG/: basic.ipynb  implementations.ipynb  pdfLoader.ipynb
RAG/data/: my_cat.txt  my_dog_new.txt
agents/chatbot/: main.py
config/: model.py  setting.py
docs/: FRONTEND_ARCHITECTURE.md  FULL-WORKFLOW.md  INFRASTRUCTURE_GUIDE.md  INTEGRATION_GUIDE.md  PRODUCT_MANUAL.md  RBAC_GUIDE.md  README.md  ROLLBACK_RUNBOOK copy.md  ROLLBACK_RUNBOOK.md  SCALING_GUIDE.md  SIMPLE_RBAC.md  analytics-integration.md  api-reference.md  api.md  architecture.md  authentication.md  business-flows.md  configuration.md  context-management.md  custom-workflow-cookbook.md  custom-workflow-definition-api-design.md  database-schema.md  database.md  deployment.md  disaster-recovery.md  docker-deployment.md  end-to-end-validation.md  event-model.md  events.md  getting-started.md  integration-architecture.md  integration-guide.md  load-testing.md  local-development.md  observability-metrics.md  openapi.yaml  performance.md  production-checklist.md  production-readiness-audit.md  provider-routing.md  (+14 more)
docs/integration/: email-templates.md  event-contracts.md  inapp-templates.md  integration-audit.md  integration-guide.md  postman_collection.json  push-templates.md  sms-templates.md  template-catalog.md  webhook-guide.md
docs/modules/: admin.md  analytics.md  (+14 more)
faiss_index/: index.faiss  index.pkl
graph/: index_docs.py  memory.py
langchain_basic/: langchain_intro.ipynb  messaging.ipynb  middleware.ipynb  model_integration.ipynb  structurd_output.ipynb  tools.ipynb
langgraph/: memory.py
langgraph_basic/: basic_chatbot.ipynb  human_in_the_loop.ipynb
longgraph/: index_docs.py  main.py  memory.py
mcp_server/: calculatorServer.py  client.py  weatherServer.py
services/: model.py  uicli.py
src/: data_loader.py
tool/: weather.py
workspace/: README.md  bubble_sort_visualizer.py
(+12 files in other folders)
